[main] set up supertest

--- a/unit-32-projects/express-shopping-list/package.json
+++ b/unit-32-projects/express-shopping-list/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "supertest": "^6.1.6"
   }
 }
